Apply template to identity views recoverry password, lockout account, confirmations

--- a/GestionAcademica/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/GestionAcademica/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,39 @@
 ﻿@page
 @model ForgotPasswordConfirmation
+@{ ViewData["Title"] = "Confirmación de restablecimiendo de contraseña"; }
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    Layout = "_AuthLayout";
+    ViewData["title"] = "Recuperar contraseña";
+    ViewData["ClassBody"] = "sc";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
+<div class="row justify-content-center">
+    <div class="col-md-6 mt-5">
+
+        <div class="login-logo">
+            Gestión Academica
+        </div>
+        <div class="card">
+            <div class="card-body login-card-body">
+                <h1>@ViewData["Title"]</h1>
+                <p>
+                    <strong>Revisa tu email!</strong> <br />
+                        Un link de restablecimiento de contraseña ha sido enviado a tu bandeja de entrada.
+                </p>
+
+                <a asp-page="./Login"> <i class="fas fa-home"></i> Regresar al inicio</a>
+
+
+                @section Scripts {
+                    <partial name="_ValidationScriptsPartial" />
+                }
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row justify-content-center">
+    <div class="col-md-1 text-center">
+        <i class="fas fa-check-circle fa-4x text-success"></i>
+    </div>
+</div>
 
