--- a/GestionAcademica/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/GestionAcademica/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,24 @@
 ﻿@page
 @model ResetPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Reset password confirmation";
+    Layout = "_AuthLayout";
+    ViewData["Title"] = "Confirmación de restablecimiento de contraseña";
+
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+    <div class="row justify-content-center">
+        <div class="col-md-6 mt-5">
+
+            <div class="login-logo">
+                Gestión Academica
+            </div>
+            <div class="card">
+                <div class="card-body login-card-body">
+                    <h1>@ViewData["Title"]</h1>
+                    <p>
+                        Tu contraseña ha sido restablecida. Porfavor has click aqui para<a asp-page="./Login"> iniciar sesión</a>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
