--- a/GestionAcademica/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/GestionAcademica/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -3,24 +3,39 @@
 @{
     ViewData["Title"] = "Forgot your password?";
 }
+@{
+    Layout = "_AuthLayout";
+    ViewData["ClassBody"] = "login-page";
+}
 
-<h1>@ViewData["Title"]</h1>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+<div class="login-box">
+    <div class="login-logo">
+        Gestión Academica
+    </div>
+    <!-- /.login-logo -->
+    <div class="card">
+        <div class="card-body login-card-body">
+            <h4 class="text-center">Recuperar Contraseña</h4>
+            <hr />
+            <p class="login-box-msg">Ingresa tu email</p>
+            <div class="row">
+                <div class="col-md-12">
+                    <form method="post">
+                        <div asp-validation-summary="All" class="text-danger"></div>
+                        <div class="form-group">
+                            <label asp-for="Input.Email"></label>
+                            <input asp-for="Input.Email" class="form-control" />
+                            <span asp-validation-for="Input.Email" class="text-danger"></span>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-block">Recuperar</button>
+                    </form>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+
+            @section Scripts {
+                <partial name="_ValidationScriptsPartial" />
+            }
+        </div>
     </div>
 </div>
 
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
