--- a/GestionAcademica/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/GestionAcademica/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -1,22 +1,32 @@
 @page
 @model RegisterConfirmationModel
+@{ ViewData["Title"] = "Register confirmation"; }
 @{
-    ViewData["Title"] = "Register confirmation";
+    Layout = "_AuthLayout";
+    ViewData["Title"] = "Confirma tu cuenta";
+    ViewData["ClassBody"] = "cs";
 }
 
-<h1>@ViewData["Title"]</h1>
-@{
-    if (@Model.DisplayConfirmAccountLink)
-    {
-<p>
-    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-    Normally this would be emailed: <a id="confirm-link" href="@Model.EmailConfirmationUrl">Click here to confirm your account</a>
-</p>
-    }
-    else
-    {
-<p>
-        Please check your email to confirm your account.
-</p>
-    }
-}
+<div class="row justify-content-center">
+    <div class="col-md-6 mt-5">
+
+        <div class="login-logo">
+            Gestión Academica
+        </div>
+        <div class="card">
+            <div class="card-body login-card-body">
+                <h1>@ViewData["Title"]</h1>
+                <p>
+                    Hemos enviado un link de confirmación de cuenta a tu correo.
+                </p>
+
+                <a asp-page="./Login"> <i class="fas fa-home"></i> Regresar al inicio</a>
+
+
+                @section Scripts {
+                    <partial name="_ValidationScriptsPartial" />
+                }
+            </div>
+        </div>
+    </div>
+</div>
