Add CRUD  roles, add and remove users from roles, pagination helper, change layout to views

--- a/GestionAcademica/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/GestionAcademica/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -3,6 +3,7 @@
 @{
     Layout = "_AuthLayout";
     ViewData["Title"] = "Confirmación de restablecimiento de contraseña";
+    ViewData["ClassBody"] = "cs";
 
 }
 
