--- a/GestionAcademica/Views/_ViewImports.cshtml
+++ b/GestionAcademica/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using GestionAcademica
 @using GestionAcademica.Models
+@using Microsoft.AspNetCore.Identity
+@addTagHelper GestionAcademica.TagHelpers.*, GestionAcademica
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AuthoringTagHelpers
