--- a/GestionAcademica/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/GestionAcademica/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -1,10 +1,25 @@
 ﻿@page
 @model AccessDeniedModel
-@{
-    ViewData["Title"] = "Access denied";
+@{ Layout = "_AuthLayout";
+                ViewData["Title"] = "Acceso Denegado";
+                ViewData["ClassBody"] = "cs"; }
+
+<div class="row justify-content-center">
+    <div class="col-md-6 mt-5">
+
+        <div class="login-logo">
+            Gestión Academica
+        </div>
+        <div class="card">
+            <div class="card-body login-card-body">
+                <h1 class="text-danger">@ViewData["Title"]</h1>
+                <p class="text-danger">No tienes acceso a esta area.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
 }
 
-<header>
-    <h1 class="text-danger">@ViewData["Title"]</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
-</header>
