--- a/GestionAcademica/Views/Shared/_AdminHeader.cshtml
+++ b/GestionAcademica/Views/Shared/_AdminHeader.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
     //ViewData["AdminTitle"] = "Categories";
-    this.ViewContext.HttpContext.Items["AdminTitle"] = "Categories";
-    string requestedController = @ViewContext.RouteData.Values["controller"].ToString();
-    var routeName = Url.ActionContext.RouteData.Values["action"].ToString();
+    //this.ViewContext.HttpContext.Items["AdminTitle"] = "Categories";
+    string requestedController = @ViewContext.RouteData.Values["controller"].ToString() ?? "";
+    var routeName = Url.ActionContext.RouteData.Values["action"].ToString() ?? "";
     string AdminTitle = "";
 
     // For Home pages
