--- a/GestionAcademica/Views/Shared/_Layout.cshtml
+++ b/GestionAcademica/Views/Shared/_Layout.cshtml
@@ -12,9 +12,11 @@
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- overlayScrollbars -->
-    <link rel="stylesheet" href="~/lib/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/dist/css/adminlte.css" />
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <link rel="stylesheet" href="~/lib/jquery-ui/jquery-ui.min.css" />
 
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -202,13 +204,10 @@
     <!-- ./wrapper -->
     <!-- jQuery -->
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap 4 -->
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- AdminLTE App -->
-    <script src="~/lib/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="~/lib/dist/js/demo.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation/dist/additional-methods.min.js"></script>
+    
+    <script src="~/lib/jquery-ui/jquery-ui.min.js"></script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
